# render-graph

./: .gitignore  .gitmodules  Cargo.toml  LINKS.md  PROFILING.md  README.md  build-deploy.sh  deploy.sh  node_graph.json  raspi-setup.sh  render-graph-auto-save.json  run_resolume.sh  run_vdmx.sh
.cargo/: config.toml
common/: Cargo.toml
common/src/: files.rs  lib.rs  texture.rs  tree.rs  tuple.rs
editor/: Cargo.toml
editor/src/: egui_glium.rs  main.rs
editor/src/editor/: animation_ui.rs  def.rs  graph_ui.rs  mod.rs  node_textures.rs  node_tree_ui.rs  node_ui.rs  prop_ui.rs  ui_texture.rs
editor/src/tree_view/: mod.rs
editor/src/widgets/: mod.rs  style.rs
ffgl/: Cargo.toml  build.rs  wrapper.h
ffgl-lib/: Cargo.toml
ffgl-lib/src/: lib.rs  node_param.rs  validate_gl.rs
ffgl/src/: FFGLPluginHost.rs  ffgl.rs  lib.rs
glium_rpi/: Cargo.toml
glium_rpi/src/: feedback.frag  feedback_view.rs  instance.frag  instance.vert  lib.rs  model.rs  model_view_event_loop.rs  perf_record.rs  render_loop.rs  render_stars.rs  renderer.rs  stars_view.rs  util.rs  view.rs
glium_rpi/src/feedback/: feedback.frag  mod.rs
glium_rpi/src/instances/: mod.rs
glium_utils/: Cargo.toml
glium_utils/src/: event_loop_render.rs  lib.rs  model_view_event_loop.rs  util.rs
glium_utils/src/modular_shader/: mod.rs  modular_shader.rs
glium_utils/src/modular_shader/feedback/: feedback.frag  mod.rs
glium_utils/src/modular_shader/fullscreen_shader/: mod.rs
glium_utils/src/modular_shader/instances/: instance.vert  mod.rs
glium_utils/src/modular_shader/sdf/: mod.rs  sdf.frag
glium_utils/src/modular_shader/uv/: mod.rs  uv.frag
graph/: Cargo.toml
graph/src/: isf_into_ui.rs  lib.rs
graph/src/common/: animation.rs  connections.rs  def.rs  mod.rs
graph/src/graph/: animator.rs  def.rs  graph_change_listener.rs  graph_processor.rs  graph_utils.rs  mod.rs  node_shader.rs  node_types.rs  node_update.rs  templates.rs
graph/src/textures/: mod.rs
isf_shaders/: Modulo.fs
perf/: Cargo.toml
perf/src/: lib.rs
persistence/: Cargo.toml  render-graph-auto-save.json
persistence/src/: lib.rs  ui_state.rs
shaders/: Cargo.toml  Stripes.fs
shaders/src/: lib.rs
shaders/src/fullscreen_shader/: fullscreen.vert  mod.rs
shaders/src/gl_expression/: mod.rs
shaders/src/isf/: meta.rs  mod.rs  shader.rs  updater.rs
shaders/src/obj_shader/: loader.rs  mod.rs  obj.frag  pos_and_norm.vert  renderer.rs
shaders/src/util/: mod.rs
src/: bevy_main.rs  egui_glium.rs  egui_render_loop.rs  ffgl_plugin.rs  kiss.rs  lib.rs  main.rs  mods.rs  nannou.rs  stars.rs  vst_plugin.rs
src/common/: animation.rs  connections.rs  def.rs  mat4_animator.rs  mat4_ui.rs  mod.rs  persistent_state.rs  ui_util.rs
src/editor/: animation_ui.rs  def.rs  graph_editor_plugin.rs  graph_ui.rs  mod.rs  node_textures.rs  node_tree_ui.rs  node_ui.rs  prop_ui.rs
src/ffgl_plugin/: gl_backend.rs  mod.rs
src/fullscreen_shader/: fullscreen.vert  mod.rs
src/gl_expression/: mod.rs
src/graph/: animator.rs  app.rs  conection_def.rs  connection_types.rs  def.rs  egui_render_loop.rs  from_isf.rs  glium_egui.rs  graph.rs  graph_change_listener.rs  graph_ecs.rs  graph_processor.rs  graph_ui.rs  graph_utils.rs  helpers.rs  isf.rs  isf_shader.rs  logic.rs  mod.rs  node_connections.rs  node_data.rs  node_shader.rs  node_tree_ui.rs  node_types.rs  node_ui.rs  node_update.rs  prop_ui.rs  render_glium.rs  renderer.rs  shader_graph.rs  shader_graph_processor.rs  shader_graph_renderer.rs  shader_manager.rs  shader_node_graph.rs  shaders.rs  spout_out_shader.rs  textures.rs  trait_impl.rs  ui.rs  util.rs
src/graph/fullscreen_shader/: mod.rs
src/isf/: into_ui.rs  meta.rs  mod.rs  prefix.glsl  shader.rs  updater.rs
src/obj_shader/: loader.rs  mod.rs  obj.frag  obj.vert  pos_only.vert  renderer.rs
src/stars/: mod.rs  model.rs  render_stars.rs  stars.rs
src/textures/: mod.rs  ui.rs
src/tree_view/: mod.rs
src/util/: mod.rs
src/wgsl/: renderer.rs  renderer_nannou_view.rs
src/wgsl/shaders/: frag.wgsl
src/widgets/: debug.rs  limited_ui.rs  style.rs
stars/: Cargo.toml
stars/src/: lib.rs
syphon/: Cargo.toml  README.md  build.rs  wrapper.h
vst-lib/: Cargo.toml
