[package]
name = "render-graph"
version = "0.1.0"
edition = "2021"

[lib]
name = "render_graph_lib"
crate-type = ["cdylib"]
panic = "unwind"

[features]
# default = ["editor"]
vst_plugin = ["dep:vst", "dep:vst_window", "dep:raw-window-handle"]
ffgl_plugin = ["dep:ffgl", "dep:gl_loader"]
editor = ["dep:egui", "dep:egui_glium", "dep:native-dialog", "dep:signal-hook"]
webui = ["dep:leptos", "dep:actix-web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
spout_texture_share = { path = "./spout" }

[target.'cfg(macos)'.dependencies]
syphon = { path = "./syphon" }

[dependencies]
glium = "0.32.1"
rand = "0.8.5"
egui_node_graph = { version = "0.4.0", features = ["persistence"] }

egui = { version = "0.19.0", optional = true, features = ["bytemuck"] }
egui_glium = { version = "0.19.0", optional = true }

itertools = "0.10.2"
isf = "0.1.0"
gl = "0.14.0"

glam = { version = "0.21.3", features = ["serde"] }

strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }

native-dialog = { version = "0.6.3", optional = true }
slotmap = "1.0.6"
thiserror = "1.0.37"
glsl = "6.0.1"
anyhow = "1.0.66"
signal-hook = { version = "0.3.14", optional = true }
serde_json = "1.0.87"
serde = "1.0.147"
delegate = "0.9.0"

glutin = { version = "0.30.6" }

#vst_plugin
vst = { version = "0.3.0", optional = true }
vst_window = { version = "0.3.0", optional = true }
raw-window-handle = { version = "0.5.0", optional = true }
obj = { version = "0.10.2", features = ["genmesh"] }
genmesh = "0.6.2"


ffgl = { path = "../ffgl-rs", optional = true }
gl_loader = { version = "0.1.2", optional = true }

# webui
leptos = { version = "0.1.0", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
vectorize = "0.2.0"

color-eyre = "0.5"
partial_application = "0.2.1"
try_utils = "0.1.2"
lazy_static = "1.4.0"
