[package]
name = "render-graph"
version = "0.1.0"
edition = "2021"


[workspace]
members = ["editor", "graph", "shaders", "common", "persistence", "ffgl-lib"]

[features]
# default = ["editor"]
vst_plugin = ["dep:vst", "dep:vst_window", "dep:raw-window-handle"]
# ffgl_plugin = ["dep:ffgl", "dep:gl_loader"]
webui = ["dep:leptos", "dep:actix-web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
spout_texture_share = { path = "./spout" }

[target.'cfg(macos)'.dependencies]
syphon = { path = "./syphon" }

[dependencies]
vst = { version = "0.3.0", optional = true }
vst_window = { version = "0.3.0", optional = true }
raw-window-handle = { version = "0.5.0", optional = true }


# webui
leptos = { version = "0.1.0", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }

rand = "0.8.5"


#vst_plugin

lazy_static = "1.4.0"

[workspace.dependencies]

delegate = "0.9.0"
egui = { version = "0.19.0", features = ["bytemuck"] }
emath = { version = "0.19.0", features = ["bytemuck"] }
epaint = { version = "0.19.0", features = ["bytemuck"] }

glutin = { version = "0.30.6" }
color-eyre = "0.5"
egui_node_graph = { version = "0.4.0", features = ["persistence"] }
glium = "0.32.1"
anyhow = "1.0.66"
serde = "1.0.147"
vectorize = "0.2.0"

strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
slotmap = "1.0.6"
thiserror = "1.0.37"

glam = { version = "0.21.3", features = ["serde"] }
itertools = "0.10.2"
