# [package]
# name = "render-graph"
# version = "0.1.0"
# edition = "2021"


[workspace]
members = ["editor", "graph", "shaders", "common", "persistence", "ffgl-lib"]
default-members = ["editor"]

[workspace.package]
authors = ["Edward Taylor <dev@edt.nz>"]
license = "	GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [target.'cfg(windows)'.dependencies]
# spout_texture_share = { path = "./spout" }

# [target.'cfg(macos)'.dependencies]
# syphon = { path = "./syphon" 
[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1


[workspace.dependencies]

delegate = "0.9.0"
egui = { version = "0.19.0", features = ["bytemuck"] }
emath = { version = "0.19.0", features = ["bytemuck"] }
epaint = { version = "0.19.0", features = ["bytemuck"] }

glutin = { version = "0.30.6" }
color-eyre = "0.5"
egui_node_graph = { version = "0.4.0", features = ["persistence"] }
glium = "0.32.1"
anyhow = "1.0.66"
serde = "1.0.147"
vectorize = "0.2.0"

strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
slotmap = "1.0.6"
thiserror = "1.0.37"

glam = { version = "0.21.3", features = ["serde"] }
itertools = "0.10.2"
