[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium.workspace = true
serde.workspace = true
egui_node_graph.workspace = true
egui.workspace = true
# egui_glium.workspace = true
slotmap.workspace = true
