[package]
name = "ffgl-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "render_graph_lib"
crate-type = ["cdylib"]
panic = "unwind"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

graph = { path = "../graph" }
gl = "0.14.0"
ffgl = { path = "../../ffgl-rs" }
gl_loader = { version = "0.1.2" }
itertools.workspace = true
glium.workspace = true
egui_node_graph.workspace = true
common = { "path" = "../common" }
persistence = { "path" = "../persistence" }
