[package]
name = "ffgl-lib"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

graph = { path = "../graph" }
gl = "0.14.0"
# ffgl = { git = "https://github.com/edeetee/ffgl-rs", version = "0.1.2" }
ffgl = { path = "../../ffgl-rs" }
gl_loader = "0.1.2"
itertools.workspace = true
glium.workspace = true
egui_node_graph.workspace = true
common = { "path" = "../common" }
persistence = { "path" = "../persistence" }


# [patch."https://github.com/edeetee/ffgl-rs"]
