[package]
name = "glium_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.31.0"
glam = "0.17.3"
assets_manager = { version = "0.8.3", features = ["hot-reloading"] }
lazy_static = "1.4.0"