[package]
name = "persistence"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
egui_node_graph.workspace = true
serde.workspace = true
serde_json = "1.0.87"
vectorize.workspace = true
graph = { path = "../graph" }
common = { path = "../common" }
anyhow.workspace = true
egui.workspace = true
slotmap.workspace = true
