[package]
name = "vst-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
vst = { version = "0.3.0", optional = true }
vst_window = { version = "0.3.0", optional = true }
raw-window-handle = { version = "0.5.0", optional = true }
